test/compile_errors/err_rc_is_not_copy.w
//! expect-check-fail: use of moved value

fn main:
    let rc = Rc.new(41)
    let _moved = rc
    let _use_after_move = rc
